* Added 'Frame Limit' option to Video settings.
* Added 'Maximum Render Size' option to Video settings.
* Improved visual indication of which item set bonuses are active.
* Support enabling touch screen controls on non-Android systems.
* Added 'Touch Gamepad Scale' option to Input settings.
* Support fullscreen mode in the Emscripten port.

Engine fixes:

* Fix memory leak of tab control in stash menu (MiroslavR)
* Fixed stat bars not having any fill when the value they were representing was non-zero. Now they will always show at least 1 pixel of the bar's fill graphics.
* Fixed a bug where the game window could be resized below the minimum size after exiting fullscreen mode.
* Removed the default resolution scaling when virtual_heights is undefined.
* Improved performance when checking map event hotspots.
* Fix Windows-style paths with backslashes not working on non-Windows systems.
* Prevent allies counting as attack targets when using mouse movement.
* Fix needing to press the 'Cancel' key twice to exit the vendor menu.
* Fix unintended key presses being registered when quitting the game via an OS keyboard shortcut.
* Fix divide-by-zero crash when using the dev HUD with a game that uses orthogonal rendering.
* Fixed a memory leak in Loot copy constructor.
* Fixed 'resist_percent' property of engine/combat.txt not working when targets had 100% resistance.
* Support attack_speed effects with a magnitude less than 100%.
* Fixed bug where dead entities could steal HP/MP.
* Fix broken parsing of engine/default_keybindings.txt.
* Fix Effect animations not being synced properly in some cases.
* Removed hard-coded restrictions on using items from the inventory. Now any item that has a power and is not equipment can be used.
* Fix crash when fonts are missing. The engine will try to fall back to the next available font for the current language.