@@ -461,6 +461,8 @@ body {
 
 <p><strong>horizontal_list.text_width</strong> | <code>int</code> | The pixel width of the text area that displays the currently selected item. Default is 150 pixels;</p>
 
+<p><strong>scrollbar.bg_color</strong> | <code>color, int : Color, Alpha</code> | The background color for the entire scrollbar.</p>
+
 <hr />
 
 <h4>EngineSettings: XP table</h4>
